# try-github-actions-cmake

./: .gitignore  CMakeLists.txt  README.md  helloworld.cpp  helloworld.h  main.cpp  test_helloworld.cpp  test_version.cpp
.github/workflows/: cmake.yml
